--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
               <!-- volume -->
               <div class="volume">
                 <div class="volume-icon">
-                  <i class="fas fa-volume-up" title="Mute" id="volume-icon"></i>
+                  <i
+                    class="fas fa-volume-high"
+                    title="Mute"
+                    id="volume-icon"
+                  ></i>
                 </div>
                 <div class="volume-range" title="Change Volume">
                   <div class="volume-bar"></div>
